// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQAPcen1Ru2nI1urni_BYN8zCdjVOdCUAhIg45A18aEivI8j"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQBEq-JZUJSYIIw0FijpZDsN4XX9HCKm71kmK6FFgFkBdYLU"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQAMWidTVo_mSZCubJt9gJtdgpdwkyrIPhBIy82Bo4Q7jxhr"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQAPcen1Ru2nI1urni_BYN8zCdjVOdCUAhIg45A18aEivI8j",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 18178n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAPcen1Ru2nI1urni_BYN8zCdjVOdCUAhIg45A18aEivI8j",
            "to": "kQBEq-JZUJSYIIw0FijpZDsN4XX9HCKm71kmK6FFgFkBdYLU",
            "type": "internal",
            "value": 9965719000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAPcen1Ru2nI1urni_BYN8zCdjVOdCUAhIg45A18aEivI8j",
          "to": "kQBEq-JZUJSYIIw0FijpZDsN4XX9HCKm71kmK6FFgFkBdYLU",
          "type": "internal",
          "value": 9965719000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17079n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBEq-JZUJSYIIw0FijpZDsN4XX9HCKm71kmK6FFgFkBdYLU",
            "to": "kQAMWidTVo_mSZCubJt9gJtdgpdwkyrIPhBIy82Bo4Q7jxhr",
            "type": "internal",
            "value": 9938107000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBEq-JZUJSYIIw0FijpZDsN4XX9HCKm71kmK6FFgFkBdYLU",
          "to": "kQAMWidTVo_mSZCubJt9gJtdgpdwkyrIPhBIy82Bo4Q7jxhr",
          "type": "internal",
          "value": 9938107000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17089n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAMWidTVo_mSZCubJt9gJtdgpdwkyrIPhBIy82Bo4Q7jxhr",
            "to": "kQAMWidTVo_mSZCubJt9gJtdgpdwkyrIPhBIy82Bo4Q7jxhr",
            "type": "internal",
            "value": 9910477000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAMWidTVo_mSZCubJt9gJtdgpdwkyrIPhBIy82Bo4Q7jxhr",
          "to": "kQAMWidTVo_mSZCubJt9gJtdgpdwkyrIPhBIy82Bo4Q7jxhr",
          "type": "internal",
          "value": 9910477000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4951n,
      },
    ],
  },
]
`;
